# Context-Engine

./: .dockerignore  .env.example  .gitignore  .replit  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RETRIEVAL_QUALITY_GAPS.md  SECURITY.md  TASK_PLAN.md  alembic.ini  docker-compose.smoke.yml  docker-compose.yml  project.md  pyproject.toml  replit.md
.agent-runs/: 2026-07-14-glm-founder-oversight-loop-task.md  2026-07-14-kimi-founder-oversight-contract-task.md  2026-07-14-qwen-founder-scrutiny-task.md  2026-07-14-xiaomi-founder-oversight-review-task.md  2026-07-17-codex-explicit-goals-workspaces-task.md  2026-07-17-codex-product-loop-hardening-task.md  2026-07-17-codex-product-loop-ui-task.md  2026-07-17-codex-readme-product-story-task.md  2026-07-17-codex-repository-evidence-inspection-task.md  2026-07-17-codex-repository-ignore-indexing-task.md  2026-07-17-codex-workspace-state-isolation-task.md  agent-1-task.md  agent-2-task.md  agent-3-task.md  agent-4-task.md  ai-agents-function-report.md  deepseek-task.md  glm-review-report.md  glm-task.md  kimi-task.md  qwen-task.md  xiaomi-task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend-accuracy.yml  ci.yml  release-gate.yml
alembic/: env.py
alembic/versions/: 20260328_0001_initial_schema.py  20260330_0002_source_documents_tenant_isolation.py  20260331_0003_sync_jobs.py  20260331_0004_trust_operator_apis.py  20260331_0005_zoom_connector_type.py  20260331_0006_component_source_fingerprint.py  20260401_0007_backend_hardening_fields.py  20260401_0008_source_lifecycle_and_review_history.py  20260401_0009_eval_runs.py  20260401_0010_github_connector_type.py  20260411_0011_local_connector_type.py  20260425_0012_eval_proof_metrics.py  20260426_0013_connector_app_configs.py
app/: config.py  database.py  main.py  migrations.py  models.py  source_identity.py  taxonomy.py  time.py
app/agents/: context_pack.py  gap_detector.py  graph_builder.py  relationship_agent.py  semantic_linker.py
app/alembic/: __init__.py  env.py
app/api/: admin.py  agents_api.py  briefing.py  checkpoints.py  connectors.py  context.py  context_digest.py  (+19 more)
attached_assets/: Pasted--LLM-error-litellm-NotFoundError-OpenAIException-The-mo_1777801735353.txt  Pasted-AI-error-litellm-RateLimitError-RateLimitError-OpenAIEx_1777802590557.txt  Pasted-Your-OpenAI-account-has-exceeded-its-quota-or-has-no-bi_1777803044128.txt
data/: context.db
deploy/: README.md
docs/: agent-harness.md  ai-context.md  architecture.md  board-vs-explore.md  connectors-graph-contract.md  connectors.md  context-compiler-v2.md  context-engine-vs-rag-frameworks.md  context-pack-v2.md  demo.md  deterministic-project-compiler-contract.md  evals.md  founder-oversight-contract.md  knowledge-graph-contract.md  knowledge-graph-display-strategy.md  mcp.md  oss-readiness.md  product-positioning.md  release.md  roadmap-completion-contract.md  runbook.md  security-context-packs.md  self-hosting.md  slack.md
frontend/: debug.js  index.html  package-lock.json  package.json  screenshot.js  tailwind.config.js  vite.config.js
scripts/: __init__.py  backup.sh  bootstrap.sh  dev.sh  diagnose.sh  doctor.sh  preflight_phase1.py  restore.sh  run_backfill.py  run_eval_regression.py  seed_demo.py  setup.sh  smoke.sh  smoke_phase1.py  start.sh  status.sh  upgrade.sh
tests/: conftest.py  test_adversarial_graph.py  test_agent_adapters.py  test_agents.py  test_alembic.py  test_auth.py  test_checkpoints.py  test_claim_graph.py  test_cli.py  test_connectors.py  test_context_compiler.py  test_context_compiler_eval.py  test_credentials.py  test_demo_seed.py  test_docs.py  test_embedder.py  test_evidence_ledger.py  test_extraction.py  test_extraction_eval.py  test_founder_oversight.py  test_graph_api.py  test_graph_truth.py  test_harness_launcher.py  test_harness_outcomes.py  test_ingestion.py  test_knowledge_graph.py  test_learning_loop.py  test_live_retrieval.py  test_local_harness.py  test_mcp.py  test_migrations.py  test_model_profiles.py  test_models_api.py  test_project_memory.py  test_repo_indexer.py  test_repo_watcher.py  test_session_continuity.py  test_session_library.py  test_session_summary.py  test_source_revision_migrations.py  (+6 more)
(+332 files in other folders)
