[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Structured context infrastructure for AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "celery>=5.4.0,<6.0.0",
  "cryptography>=43.0.0,<48.0.0",
  "dlt>=1.0.0,<2.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "litellm>=1.40.0,<2.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "redis>=5.2.1,<6.0.0",
  "requests>=2.31.0,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.scripts]
context-engine-evals = "app.evals.runner:main"
context-engine-eval-regression = "app.evals.regression:main"
context-engine-seed-demo = "scripts.seed_demo:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "ruff>=0.11.2,<1.0.0",
]
preflight = [
  "psycopg[binary]>=3.2.6,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
