[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.2.0"
description = "Structured context infrastructure for AI systems"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Context Engine contributors" },
]
keywords = [
  "ai-agents",
  "context-engineering",
  "knowledge-graph",
  "mcp",
  "provenance",
  "self-hosted",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "litellm>=1.40.0,<2.0.0",
  "mcp>=1.0.0,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "cryptography>=42.0.0,<46.0.0",
]

[project.scripts]
ctxe = "app.cli.main:main"

[project.urls]
Homepage = "https://github.com/Darshan174/Context-Engine"
Repository = "https://github.com/Darshan174/Context-Engine"
Issues = "https://github.com/Darshan174/Context-Engine/issues"
Documentation = "https://github.com/Darshan174/Context-Engine#readme"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "ruff>=0.11.2,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
